Fixed login not centered

--- a/prdeploy-app/src/app/auth/login-callback/login-callback.component.scss
+++ b/prdeploy-app/src/app/auth/login-callback/login-callback.component.scss
@@ -1,5 +1,9 @@
 @import '_variables';
 
+:host {
+  flex: 1 1 auto;
+}
+
 .loading {
   display: flex;
   flex-direction: column;
