--- a/prdeploy-app/src/app/auth/login/login.component.scss
+++ b/prdeploy-app/src/app/auth/login/login.component.scss
@@ -1,5 +1,9 @@
 @import '../../../sass/variables';
 
+:host {
+  flex: 1 1 auto;
+}
+
 .login-section {
   width: 425px;
   height: 300px;
